session-39-ingress,controllers/ingress-demo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80

      # - path: /api
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: backend-service 
      #       port:
      #         number: 3000

    # apply and try to access http://myapp.local/api (this will work with /api path)
